include $(top_srcdir)/misc/Makefile.common

SUBDIRS = binary_file_decoder \
	instruction_decoder

#noinst_LTLIBRARIES = libInput_Module.la

# HEADERS
#noinst_HEADERS = Input_Module.hpp

#SOURCES
#libInput_Module_la_SOURCES = Input_Module.cpp

#LIBRARIES
#LIBDIR = $(top_builddir)/src/Module/Input

#libInput_Module_la_LIBADD = \
#	$(LIBDIR)/Semantic_Mapper/libSemantic_Mapper.la \
#	$(LIBDIR)/Binary_File_Decoder/libBinary_File_Decoder.la \
#	$(LIBDIR)/Instruction_Decoder/libInstruction_Decoder.la
