include $(top_srcdir)/misc/Makefile.common

SUBDIRS = ia32

#noinst_LTLIBRARIES = libInstruction_Decoder.la

#noinst_HEADERS = \
#	Processor.hpp \
#	Instruction_Decoder.hpp \
#	Instruction_Decoder_Manager.hpp \
#	Instruction_Decoder_Manager.i

#libInstruction_Decoder_la_SOURCES = \
#	Instruction_Decoder_Manager.cpp


clean:
	rm -f *~
